--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,47 @@
 {
     "name": "qemu/apiclient",
+    "description": "API para consultas de DNI y RUC",
+    "type": "project",
+    "license": "MIT",
+    "version": "1.0.0",
+    "authors": [
+        {
+            "name": "Qemu",
+            "email": "tu-email@ejemplo.com"
+        }
+    ],
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "require": {
+        "php": ">=7.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
+    },
     "autoload": {
         "psr-4": {
             "Qemu\\Apiclient\\": "src/"
+        },
+        "files": [
+            "api/config.php"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Qemu\\Apiclient\\Tests\\": "tests/"
         }
     },
-    "require": {}
+    "scripts": {
+        "test": "phpunit",
+        "post-install-cmd": [
+            "@composer dump-autoload"
+        ],
+        "post-update-cmd": [
+            "@composer dump-autoload"
+        ]
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true
+    }
 }
